--- a/ceny.html
+++ b/ceny.html
@@ -9,8 +9,8 @@
 <div class="container">
     <div class="fix"><img src = "agr.png" class="image"><div class="textnusl">АГРОУСАДЬБА "GREEN HOUSE"</div></div>
 
-    <div class="fix"><div class="sq"></div><div class="text9">Цены</div></div>
-<div class="tab1">
+
+<div class="tab1" style="z-index: 0;">
 <table style="border: 1px solid rgb(161, 155, 155);">
   <thead>
     <tr>
@@ -21,41 +21,41 @@
   </thead>
   <tbody>
     <tr>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">Дом над водой</td>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">2-4</td>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">300 BYN</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; padding: 4px;">Дом над водой</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; padding: 4px;">2-4</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; padding: 4px;">300 BYN</td>
     </tr>
     <tr>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">Уютный дом</td>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">6</td>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">400 BYN</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; padding: 4px;">Уютный дом</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; padding: 4px;">6</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; padding: 4px;">400 BYN</td>
     </tr>
     <tr>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">Семейный дом</td>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">6</td>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">400 BYN</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; padding: 4px;">Семейный дом</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; padding: 4px;">6</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; padding: 4px;">400 BYN</td>
     </tr>
     <tr>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">Гостевой дом</td>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">11</td>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">750 BYN</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; padding: 4px;">Гостевой дом</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; padding: 4px;">11</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; padding: 4px;">750 BYN</td>
     </tr>
     <tr>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">Банный дом</td>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">14</td>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">750 BYN</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; padding: 4px;">Банный дом</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; padding: 4px;">14</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; padding: 4px;">750 BYN</td>
     </tr>
     <tr>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">Новый коттедж</td>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">20</td>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">1500 BYN</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; padding: 4px;">Новый коттедж</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; padding: 4px;">20</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; padding: 4px;">1500 BYN</td>
     </tr>
   </tbody>
 </table>
 </div>
 
 
-<div class="tab2">
+<div class="tab2" style="z-index: 0;">
 <table style="border: 1px solid rgb(161, 155, 155);">
   <thead>
     <tr>
@@ -67,28 +67,28 @@
   </thead>
   <tbody>
     <tr>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">Большая баня + Терраса</td>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">450 BYN</td>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">10-15</td>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">4-6 ч.</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; padding: 4px;">Большая баня + Терраса</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; padding: 4px;">450 BYN</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; padding: 4px;">10-15</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; padding: 4px;">4-6 ч.</td>
     </tr>
     <tr>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">СПА комплекс (Аквазона)</td>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">300 BYN</td>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">10</td>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">2 ч.</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; padding: 4px;">СПА комплекс (Аквазона)</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; padding: 4px;">300 BYN</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; padding: 4px;">10</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; padding: 4px;">2 ч.</td>
     </tr>
     <tr>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">СПА комплекс (Аквазона)</td>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">200 BYN</td>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">2-4</td>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">2 ч.</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; padding: 4px;">СПА комплекс (Аквазона)</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; padding: 4px;">200 BYN</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; padding: 4px;">2-4</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; padding: 4px;">2 ч.</td>
     </tr>
     <tr>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">Баня на берегу реки с вениками</td>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">200 BYN</td>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">10</td>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">3 ч.</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; padding: 4px;">Баня на берегу реки с вениками</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; padding: 4px;">200 BYN</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; padding: 4px;">10</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; padding: 4px;">3 ч.</td>
     </tr>
   </tbody>
 </table>
@@ -96,7 +96,7 @@
 
 
 
-<div class="tab3">
+<div class="tab3" style="z-index: 0;">
 <table style="border: 1px solid rgb(161, 155, 155);">
   <thead>
     <tr>
@@ -106,64 +106,64 @@
   </thead>
   <tbody>
     <tr>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; border: 1px solid black; padding: 4px;">Завтрак</td>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">15</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; padding: 4px;">Завтрак</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; padding: 4px;">15</td>
     </tr>
     <tr>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; border: 1px solid black; padding: 4px;">Обед</td>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">35</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; padding: 4px;">Обед</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; padding: 4px;">35</td>
     </tr>
     <tr>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; border: 1px solid black; padding: 4px;">обычный Ужин 1 горячее</td>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">60</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; padding: 4px;">обычный Ужин 1 горячее</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; padding: 4px;">60</td>
     </tr>
     <tr>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; border: 1px solid black; padding: 4px;">обычный Ужин 2 горячих</td>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">80</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; padding: 4px;">обычный Ужин 2 горячих</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; padding: 4px;">80</td>
     </tr>
     <tr>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; border: 1px solid black; padding: 4px;">Банкетный ужин с меню Гриль</td>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">105</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; padding: 4px;">Банкетный ужин с меню Гриль</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; padding: 4px;">105</td>
     </tr>
     <tr>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; border: 1px solid black; padding: 4px;">Банкетный ужин с доп. меню</td>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">135</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; padding: 4px;">Банкетный ужин с доп. меню</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; padding: 4px;">135</td>
     </tr>
     <tr>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; border: 1px solid black; padding: 4px;">Детский лагерь меню пансион</td>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">95</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; padding: 4px;">Детский лагерь меню пансион</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; padding: 4px;">95</td>
     </tr>
     <tr>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; border: 1px solid black; padding: 4px;">3-х разовое меню пансион</td>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">80</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; padding: 4px;">3-х разовое меню пансион</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; padding: 4px;">80</td>
     </tr>
     <tr>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; border: 1px solid black; padding: 4px;">Новогодняя ночь</td>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">220</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; padding: 4px;">Новогодняя ночь</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; padding: 4px;">220</td>
     </tr>
     <tr>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; border: 1px solid black; padding: 4px;">Бизнес встреча фуршет-обед-ужин-аренда зала</td>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">135</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; padding: 4px;">Бизнес встреча фуршет-обед-ужин-аренда зала</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; padding: 4px;">135</td>
     </tr>
     <tr>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; border: 1px solid black; padding: 4px;">Свадебный фуршет</td>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">15</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; padding: 4px;">Свадебный фуршет</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; padding: 4px;">15</td>
     </tr>
     <tr>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; border: 1px solid black; padding: 4px;">Свадебный банкет</td>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">135</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; padding: 4px;">Свадебный банкет</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; padding: 4px;">135</td>
     </tr>
     <tr>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; border: 1px solid black; padding: 4px;">Программа выпускной</td>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">230</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; padding: 4px;">Программа выпускной</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; padding: 4px;">230</td>
     </tr>
     <tr>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; border: 1px solid black; padding: 4px;">Программа масленица 6ч</td>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">200</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; padding: 4px;">Программа масленица 6ч</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; padding: 4px;">200</td>
     </tr>
     <tr>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; border: 1px solid black; padding: 4px;">Кофе-пауза</td>
-      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; border: 1px solid black; padding: 4px;">5</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: left; padding: 4px;">Кофе-пауза</td>
+      <td style="border: 1px solid rgb(161, 155, 155); text-align: center; padding: 4px;">5</td>
     </tr>
   </tbody>
 </table>
@@ -175,10 +175,15 @@
 <div class="c3">Питание</div>
 <div class="c4">1</div>
 
-
 </div>
 
+   <div class="fix"><div class="sq"></div><div class="text9">Цены</div></div>
 <div class="fix"><div class="text7"><b><a href="index.html" target="_self"><img width="90px" height="90px" src="house.png"></a></b></div></div>
+
+
+    <div class="fix"><div class="inst"><a href="https://www.instagram.com/usadba_greenhouse" target="_self"><img width="70px" height="70px" style="border-radius: 30%" src="inst.jpg"></a></div>
+    <div class="fcb"><a href="https://www.facebook.com/Meta" target="_self"><img width="70px" height="70px" style="border-radius: 30%" src="fcb.jpg"></a></div>    
+    <div class="vk"><a href="https://vk.com/vk" target="_self"><img width="70px" height="70px" style="border-radius: 30%" src="vk.jpg"></a></div></div>
 
 </body>
 </html>
