--- a/index.html
+++ b/index.html
@@ -11,15 +11,12 @@
 <div class="container">
     <div class="fix"><img src = "agr.png" class="image"></div>
 
-
-<div class="textn">АГРОУСАДЬБА "GREEN HOUSE"</div>
     
-    <div class="text1"><b><a href="uslugi.html" target="_self">Услуги</a></b></div> <div class="text2"><b><a
-    href="ceny.html" target="_self">Цены</a></b></div> <div
-    class="text3"><b><a href="bronirovanie.html"
-    target="_self">Бронирование</a></b></div> <div class="text4"><b><a
-    href="kontakty.html" target="_self">Контакты</a></b></div> <div
-    class="text5"><b><a href="photo.html" target="_self">Фото</a></b></div>
+    <div class="text1"><b><a href="uslugi.html" target="_self">Услуги</a></b></div> 
+    <div class="text2"><b><a href="ceny.html" target="_self">Цены</a></b></div> 
+    <div class="text3"><b><a href="bronirovanie.html" target="_self">Бронирование</a></b></div> 
+    <div class="text4"><b><a href="kontakty.html" target="_self">Контакты</a></b></div> 
+    <div class="text5"><b><a href="photo.html" target="_self">Фото</a></b></div>
     <div class="text6"><b><a href="onas.html" target="_self">О нас</a></b></div> 
   </div>
 
@@ -35,6 +32,13 @@
 
     <div class="k6"><a href="onas.html" target="_self"><img width="150px" height="150px" src="onas.png"></a></div>
     
+
+    <div class="fix"><div class="sq"></div><div class="textn">АГРОУСАДЬБА "GREEN HOUSE"</div></div>
+
+
+    <div class="fix"><div class="inst"><a href="https://www.instagram.com/usadba_greenhouse" target="_self"><img width="70px" height="70px" style="border-radius: 30%" src="inst.jpg"></a></div>
+    <div class="fcb"><a href="https://www.facebook.com/Meta" target="_self"><img width="70px" height="70px" style="border-radius: 30%" src="fcb.jpg"></a></div>    
+    <div class="vk"><a href="https://vk.com/vk" target="_self"><img width="70px" height="70px" style="border-radius: 30%" src="vk.jpg"></a></div></div>
 
 </body>
 </html>
