--- a/kontakty.html
+++ b/kontakty.html
@@ -9,10 +9,8 @@
 <div class="container">
     <div class="fix"><img src = "agr.png" class="image"><div class="textnusl">АГРОУСАДЬБА "GREEN HOUSE"</div></div>
 
-    <div class="text9">Контакты</div>
 
-
-    <div class="kont1">Адрес</div>    
+    <div class="kont1">Местонахождение</div>    
     <div class="kont5">Минская область, Столбцовский район, д.Свериново</div>
 
     <div class="kont2">Телефон</div>
@@ -24,12 +22,13 @@
     <div class="kont4">Время работы</div>
     <div class="kont8">Пн-Вс Круглосуточно</div>
 
+        <div class="fix"><div class="sq"></div><div class="text9">Контакты</div></div>
+
 </div>
 
 <div class="layer25">
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d618.0807802969282!2d26.939661492528668!3d53.44342308807384!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46d91343db7d5113%3A0xc608787b7ad7820!2z0KPRgdCw0LTRjNCx0LAgR3JlZW4gSG91c2U!5e1!3m2!1sru!2sby!4v1711395917346!5m2!1sru!2sby" width="870" height="490" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
 
-<div class="text7"><b><a href="index.html" target="_self"><img width="90px" height="90px" src="house.png"></a></b></div>
 
 
     <div class="t1"><img width="70px" height="70px" src="adres.png"></div>
@@ -39,6 +38,14 @@
     <div class="t3"><img width="70px" height="70px" src="email.png"></div>
 
     <div class="t4"><img width="70px" height="70px" src="vremya.png"></div>
+
+<div class="fix"><div class="sq"></div><div class="text9">Контакты</div></div>
+<div class="fix"><div class="text7"><b><a href="index.html" target="_self"><img width="90px" height="90px" src="house.png"></a></b></div></div>
+
+
+   <div class="fix"> <div class="inst"><a href="https://www.instagram.com/usadba_greenhouse" target="_self"><img width="70px" height="70px" style="border-radius: 30%" src="inst.jpg"></a></div>
+    <div class="fcb"><a href="https://www.facebook.com/Meta" target="_self"><img width="70px" height="70px" style="border-radius: 30%" src="fcb.jpg"></a></div>    
+    <div class="vk"><a href="https://vk.com/vk" target="_self"><img width="70px" height="70px" style="border-radius: 30%" src="vk.jpg"></a></div></div>
 
 
 </body>
