--- a/uslugi.html
+++ b/uslugi.html
@@ -12,8 +12,8 @@
 
 
 <div class="round7"></div><div class="usl1">ПРОЖИВАНИЕ</div>
-<div class="usl2">Для размещения гостей на территории имеется 2 больших дома. Один из которых имеет три комнаты, сделанные в особом стиле. В каждой комнате имеется душевая и санузел, мини-кухня. В доме печки, которые согреют посетителей в любое время года. Второй дом – это двухэтажная баня с камином.
-Усадьба может сдаваться целиком без подселения других гостей. Детям до 6 лет проживание бесплатно. Снять весь дом на сутки цена договорная.</div>
+<div class="usl2">В усадьбе Green house Вас окружат гостеприимством и уютом, помогут правильно построить отдых и организовать времяпрепровождение. Вы будете лишь наслаждаться красотой окружающей природы и тишиной. К нам на усадьбу постоянно прилетают аисты, совсем рядом с домом расположен лес и протекает река Неман.
+Усадьба Green house - лучшее место отдыха для Вас и Ваших близких. К Вашим услугам шесть спальных комнат, которые изолированы друг от друга. Они удивят и порадуют оригинальным дизайном интерьера, который придуман и самостоятельно разработан хозяйкой дома. Мебель ручной работы дополнит впечатление.  </div>
 
 
 <div class="round8"></div><div class="usl3">ОРГАНИЗАЦИЯ ПИТАНИЯ</div>
@@ -22,10 +22,10 @@
 Банкетный зал 50 — 70 человек.</div>
 
 
-<div class="round9"></div><div class="usl5">РУССКАЯ БАНЯ С КАМИНОМ</div>
+<div class="round9"></div><div class="usl5">БАНЯ С КАМИНОМ</div>
 <div class="usl6">К вашим услугам предоставляется традиционная русская баня с комнатой отдыха (обеденный стол 10-12 человек, музыка, триколор ТВ, диван, холодильник, микроволновая печь, чайник, кофеварка), удобной верандой!
 На втором этаже дома идеальное место для празднования семейных торжеств, карпаративов и вечеринок (до 30 человек).
-ВМЕСТИТЕЛЬНАЯ ПАРИЛКА позволяет одновременно париться 6-8 людям.
+Вместительная парилка позволяет одновременно париться 6-8 людям.
 Душевая оборудована одной душевой стойкой! Большой электробойлер на 100 л. обеспечит горячей водой любую компанию, купель с холодной водой позволит испытать всю прелесть контрастного душа.
 В бане есть комфортабельный санузел. Баня имеет просторную террасу с прекрасным видом на которой так приятно насладиться окружающей природой после целебного сеанса с душистым березовым веником.</div>
 
@@ -33,24 +33,29 @@
 <div class="round10"></div><div class="usl7">РАЗНООБРАЗНЫЙ ДОСУГ</div>
 <div class="usl8">
   <ul>
-    <li>тихое уютное местечко для молодой пары;</li>
     <li>конная прогулка по местности;</li>
     <li>велоспорт по лесным тропинкам;</li>
-    <li>комфортные условия проживания для короткого визита и длительного отпуска в тёплое и холодное время года ( гостям предоставляется постельное бельё, полотенца, посуда, дрова);</li>
+    <li>комфортные условия проживания для короткого визита и длительного отпуска в тёплое и холодное время года (гостям предоставляется постельное бельё, полотенца, посуда, дрова);</li>
     <li>доступ в интернет, спутниковое триколор ТВ и музыка не дадут гостям заскучать;</li>
     <li>разрешается с собой брать на отдых домашних животных;</li>
     <li>имеется стоянка для автомобилей;</li>
-    <li>интересная и насыщенная программа, а также экскурсии по местности и Брестской области;</li>
+    <li>интересная и насыщенная программа, а также экскурсии по местности;</li>
     <li>чай из натуральных трав и натуральный кофе;</li>
+    <li>открытая и закрытая беседка, которые оборудованы мангалом и печью;</li>
     <li>площадка с мангалами для шашлыка, казан для ухи.</li>
 </ul></div>
 
-
-    <div class="fix"><div class="sq"></div><div class="text9">Услуги</div></div>
-
+<div class="rnd"></div>
 
 </div>
+
+    <div class="fix"><div class="sq"></div><div class="text9">Услуги</div></div>
 <div class="fix"><div class="text7"><b><a href="index.html" target="_self"><img width="90px" height="90px" src="house.png"></a></b></div></div>
+
+
+    <div class="fix"><div class="inst"><a href="https://www.instagram.com/usadba_greenhouse" target="_self"><img width="70px" height="70px" style="border-radius: 30%" src="inst.jpg"></a></div>
+    <div class="fcb"><a href="https://www.facebook.com/Meta" target="_self"><img width="70px" height="70px" style="border-radius: 30%" src="fcb.jpg"></a></div>    
+    <div class="vk"><a href="https://vk.com/vk" target="_self"><img width="70px" height="70px" style="border-radius: 30%" src="vk.jpg"></a></div></div>
 
 </body>
 </html>
