--- a/bronirovanie.html
+++ b/bronirovanie.html
@@ -41,12 +41,15 @@
 </form>
 
 
-    <div class="fix"><div class="sq"></div><div class="text9">Бронирование</div></div>
-
 </div>
 
-<div class="text7"><b><a href="index.html" target="_self"><img width="90px" height="90px" src="house.png"></a></b></div>
+    <div class="fix"><div class="sq"></div><div class="text9">Бронирование</div></div>
+    <div class="fix"><div class="text7"><b><a href="index.html" target="_self"><img width="90px" height="90px" src="house.png"></a></b></div></div>
 
+
+       <div class="fix"> <div class="inst"><a href="https://www.instagram.com/usadba_greenhouse" target="_self"><img width="70px" height="70px" style="border-radius: 30%" src="inst.jpg"></a></div>
+    <div class="fcb"><a href="https://www.facebook.com/Meta" target="_self"><img width="70px" height="70px" style="border-radius: 30%" src="fcb.jpg"></a></div>    
+    <div class="vk"><a href="https://vk.com/vk" target="_self"><img width="70px" height="70px" style="border-radius: 30%" src="vk.jpg"></a></div></div>
 
 
 </body>
