--- a/onas.html
+++ b/onas.html
@@ -9,8 +9,6 @@
 <div class="container">
     <div class="fix"><img src = "agr.png" class="image"><div class="textnusl">АГРОУСАДЬБА "GREEN HOUSE"</div></div>
 
-    <div class="text9">О нас</div>
-
 
 <div class="texton1">Экологически безопасный отдых, стремление к единению с природой, поиск неприхотливых радостей – вот устремления современного горожанина. Поэтому агроусадьбы Республики Беларусь становятся все более популярными как среди самих белорусов, так и гостей из соседних стран.</div>
 
@@ -47,12 +45,17 @@
 <div class="r"></div>
 
 
-
 </div>
 
-<div class="text7"><b><a href="index.html" target="_self"><img width="90px" height="90px" src="house.png"></a></b></div>
 
-</div>
+<div class="fix"><div class="sq"></div><div class="text9">О нас</div></div>
+<div class="fix"><div class="text7"><b><a href="index.html" target="_self"><img width="90px" height="90px" src="house.png"></a></b></div></div>
+
+
+
+    <div class="fix"><div class="inst"><a href="https://www.instagram.com/usadba_greenhouse" target="_self"><img width="70px" height="70px" style="border-radius: 30%" src="inst.jpg"></a></div>
+    <div class="fcb"><a href="https://www.facebook.com/Meta" target="_self"><img width="70px" height="70px" style="border-radius: 30%" src="fcb.jpg"></a></div>    
+    <div class="vk"><a href="https://vk.com/vk" target="_self"><img width="70px" height="70px" style="border-radius: 30%" src="vk.jpg"></a></div></div>
 
 </body>
 </html>
