--- a/photo.html
+++ b/photo.html
@@ -14,13 +14,10 @@
 <body bgcolor="e2fff4">
 
 <div class="container">
-    <div class="fix"><div class="textnusl">АГРОУСАДЬБА "GREEN HOUSE"</div></div>
-
-    <div class="text9">Фото</div>
+    
+<div class="fix"><div class="textnusl">АГРОУСАДЬБА "GREEN HOUSE"</div></div>
 
 </div>
-
-
 
 <div class="fix">
  <div class="carousel">
@@ -108,7 +105,6 @@
             </a>
         </div>
 </div>
-
 
 
 <a href="#img1">
@@ -288,10 +284,13 @@
 </a>
 
 
+<div class="fix"><div class="sq"></div><div class="text9">Фото</div></div>
+<div class="fix"><div class="text7"><b><a href="index.html" target="_self"><img width="90px" height="90px" src="house.png"></a></b></div></div>
 
 
-
-<div class="text7"><b><a href="index.html" target="_self"><img width="90px" height="90px" src="house.png"></a></b></div>
+<div class="fix"><div class="inst"><a href="https://www.instagram.com/usadba_greenhouse" target="_self"><img width="70px" height="70px" style="border-radius: 30%" src="inst.jpg"></a></div>
+<div class="fcb"><a href="https://www.facebook.com/Meta" target="_self"><img width="70px" height="70px" style="border-radius: 30%" src="fcb.jpg"></a></div>    
+<div class="vk"><a href="https://vk.com/vk" target="_self"><img width="70px" height="70px" style="border-radius: 30%" src="vk.jpg"></a></div></div>
 
 </body>
 </html>
